cabal-version:       >=1.10
name:                aoc2020
version:             0.1.0.0
license-file:        LICENSE
author:              Josh Miller
maintainer:          notjoshmiller@gmail.com
build-type:          Simple
extra-source-files:  README.md

executable aoc2020
  main-is:             
    Main.hs
  build-depends:       
    base < 5,
    text,
    bytestring,
    containers,
    unordered-containers,
    vector
  default-language:    
  Haskell2010
