cabal-version:       >=1.10
name:                aoc2020
version:             0.1.0.0
license-file:        LICENSE
author:              Josh Miller
maintainer:          notjoshmiller@gmail.com
build-type:          Simple
extra-source-files:  README.md

library advent
  build-depends:       
    base < 5,
    attoparsec,
    text,
    bytestring,
    containers,
    split,
    unordered-containers,
    vector
  default-language:    
    Haskell2010
  hs-source-dirs:    
    src
  exposed-modules:
    Advent
  other-modules:
    Advent.Day1
    Advent.Day2
    Advent.Day3
    Advent.Day4
    Advent.Prelude
  default-extensions: 
    NoImplicitPrelude,
    OverloadedStrings
  ghc-options:
    -Wall
